--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
                     <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#awards">AWARDS</a>
                     </li>
-                    <li class="nav-item">
+<!--                     <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#Research experience">AWARDS</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#Interest">AWARDS</a>
-                    </li>
+                    </li> -->
 
                 </ul>
             </div>
